src/objects/BGBK__TransactionSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BGBK__Allow_Transactions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Distributable_Funds__c</fullName>
        <description>List of Fund Names that can be distributed from. Separate each Fund with a comma. eg. 123 456 780 001, 223 543 123 000</description>
        <label>Distributable Funds</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Limit_Refunds_to_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Limit Refunds to Payments</description>
        <label>Limit Refunds to Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__LossOverage_Fund__c</fullName>
        <label>Loss/Overage Fund</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Version__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Settings</label>
</CustomObject>